--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^6.0.0-alpha.13",
     "@tanstack/react-query": "^5.40.1",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
