--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^6.0.0-alpha.13",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
     "@tanstack/react-query": "^5.51.11",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
